# PesterChum

./: .gitignore  PesterChum.pro  README.md  auth.cpp  auth.h  auth.ui  client.cpp  client.h  mainwindow.cpp
DataBase/: ChatDatabase.h
DataBase/scripts/: show_chats.sql
PesterChum/: PesterChum.pro  auth.cpp  auth.h  auth.ui  client.cpp  client.h  coloredmessagedelegate.cpp  coloredmessagedelegate.h  customItemModel.cpp  customItemModel.h  fonts.qrc  friendrequset.cpp  friendrequset.h  friendrequset.ui  images.qrc  itemdelegate.cpp  itemdelegate.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  messagemodel.cpp  messagemodel.h  messagethread.cpp  messagethread.h  serverip_to_connect.txt  userchat.cpp  userchat.h  userchat.ui  windowssystemhandler.cpp  windowssystemhandler.h
PesterChum/.qtc_clangd/: compile_commands.json
PesterChum/.qtc_clangd/.cache/clangd/index/: QApplication.9A108BAC1BE26BE4.idx  QListView.223C2579F0463E65.idx  QMessageBox.0E71A86A948F0427.idx  amxcomplexintrin.h.024A79D054331DD8.idx  auth.h.EA538C4A1E031FE3.idx  avx512bitalgintrin.h.74D0D241083E9A69.idx  (+61 more)
UNIX_Server/: CMakeLists.txt  Dockerfile  docker-compose.yml  main.cpp  server  server.cpp  server.h
UNIX_Server/DataBase/: ChatDatabase.cpp  ChatDatabase.h  Dockerfile  a.out  baza
UNIX_Server/DataBase/scripts/: add_request.sql  check_user_in_chat.sql  create_tables.sql  show_chat.sql  show_user.sql
UNIX_Server/client_debugger/: client  client.cpp  erproc.h  z
UNIX_Server/test/: Dockerfile
UNIX_Server/test/client_debugger/: client.cpp  erproc.cpp  test.cpp
